# DevSoftwareSolutionPrototypesFrontend

./: README.md
hw_11/: task_1.js  task_2.js  task_3.js  task_4.html
hw_12/: README.md  auth.js  index.html  login.html  offline.html  script.js  service-worker.js  style.css
hw_12/backend/: main.py  pyproject.toml
ui-kit/: index.html
ui-kit/scss/: _variables.scss  style.scss
ui-kit/scss/components/: _button.scss  _card.scss  _grid.scss  _input.scss  _navbar.scss
