[project]
name = "server"
version = "0.1.0"
description = "Сервер"
authors = [
    {name = "Yagunov Denis",email = "spb.jagunov.denis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
